<resources>
    <string name="app_name">Wallpaper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Amazing Wallpaper in your way</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Latest</string>
    <string name="menu_gallery">Category</string>
    <string name="menu_slideshow">GIFs</string>
    <string name="menu_tools">My Favorites</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="rate_app">Rate App</string>
    <string name="more_app">More App</string>
    <string name="about_us">About Us</string>
    <string name="setting">Setting</string>
    <string name="privaciPolice">Privaci Police</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="title_activity_my_favorite">MyFavoriteActivity</string>
</resources>
